--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+body
+    background-color: #EEEEEE !important
+.loadingSpinner
+    text-align: center
+    height: 90vh
+    display: flex
+    flex-direction: column
+    justify-content: center
+
+.postContainer
+    padding: 20px !important
